@@ -1,3 +1,5 @@
+* FEA#6840 Pas besoin de poster les mouvements d'attente (déjà postés)
+
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
