@@ -1,3 +1,5 @@
+* FEA#6840 No need to post waiting moves (already posted)
+
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
